tests/ui/aggregate_propagation_postgres/fail/scalar_cannot_over.stderr
error[E0599]: no method named `over` found for struct `ItemPrice` in the current scope
  --> tests/ui/aggregate_propagation_postgres/fail/scalar_cannot_over.rs:14:24
   |
 4 | #[PostgresTable]
   | ---------------- method `over` not found for this struct
...
14 |     let _ = item.price.over(window());
   |                        ^^^^ method not found in `ItemPrice`
